[package]
name = "rate-limits"
version = "0.1.0"
edition = "2021"
description = "A parser for HTTP rate limit headers"
license = "Apache-2.0/MIT"

[dependencies]
displaydoc = "0.2.3"
indoc = "1.0.4"
once_cell = "1.10.0"
thiserror = "1.0.30"
time = { version = "0.3.9", features = ["parsing", "macros"] }
