[package]
name = "rate-limits"
authors = ["Matthias Endler <matthias@endler.dev>"]
version = "0.2.1"
edition = "2021"
description = "A parser for HTTP rate limit headers"
license = "Apache-2.0/MIT"
homepage = "https://github.com/mre/rate-limits"
repository = "https://github.com/mre/rate-limits"
documentation = "https://docs.rs/rate-limits"
keywords = [
    "http",
    "rate-limit",
    "header",
    "parser",
]

[dependencies]
displaydoc = "0.2.3"
headers = "0.3.7"
http = "0.2.7"
indoc = "1.0.4"
once_cell = "1.10.0"
thiserror = "1.0.30"
time = { version = "0.3.9", features = ["parsing", "macros"] }
