[package]
name = "rate-limits"
authors = ["Matthias Endler <matthias@endler.dev>"]
version = "0.4.1"
edition = "2021"
description = "A parser for HTTP rate limit headers"
license = "Apache-2.0/MIT"
homepage = "https://github.com/mre/rate-limits"
repository = "https://github.com/mre/rate-limits"
documentation = "https://docs.rs/rate-limits"
keywords = [
    "http",
    "rate-limit",
    "header",
    "parser",
]

[dependencies]
displaydoc = "0.2.3"
headers = "0.3.8"
http = "0.2.9"
once_cell = "1.17.1"
thiserror = "1.0.39"
time = { version = "0.3.20", features = ["parsing", "macros"] }

[dev-dependencies]
indoc = "2.0.1"